--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
-                                                Github<br />
-                                                Pages
-                                            </h1>
+                                                Daiji<br />
+                                                Kuriakose
+					    </h1>
                                             <p>
                                                 Hosting your first GitHub web
                                                 page
