--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                                     <div class="col-md-6">
                                         <div class="detail-box">
                                             <h1>
-                                                Daiji<br />
+                                                GITHUB PAGE BY <br>
+						Daiji<br />
                                                 Kuriakose
 					    </h1>
                                             <p>
