--- a/index.html
+++ b/index.html
@@ -95,8 +95,7 @@
                                         <div class="detail-box">
                                             <h1>
                                                 GITHUB PAGE BY <br>
-						Daiji<br />
-                                                Kuriakose
+						DAIJI KURIAKOSE
 					    </h1>
                                             <p>
                                                 Hosting your first GitHub web
